PSD: don't attempt to read zero-sized blocks

BUG: 450983
(cherry picked from commit fb08feef38f1f99ec52416b29d56c40795b15659)